After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 766565 - rdtmanager: fix clock leak
rdtmanager: fix clock leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-ugly
git master
Other Linux
: Normal minor
: 1.8.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-05-17 13:02 UTC by Guillaume Desmottes
Modified: 2016-05-27 16:26 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rdtmanager: fix clock leak (867 bytes, patch)
2016-05-17 13:03 UTC, Guillaume Desmottes
committed Details | Review

Description Guillaume Desmottes 2016-05-17 13:02:47 UTC
.
Comment 1 Guillaume Desmottes 2016-05-17 13:03:08 UTC
Created attachment 328075 [details] [review]
rdtmanager: fix clock leak

The clock returned by gst_system_clock_obtain() was never unreffed.
Comment 2 Tim-Philipp Müller 2016-05-20 11:04:17 UTC
Thanks.

commit f52343fcf85d3d700e78210ff6ee07de1ea42da1
Author: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk>
Date:   Tue May 17 16:00:29 2016 +0300

    rdtmanager: fix clock leak
    
    The clock returned by gst_system_clock_obtain() was never unreffed.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=766565