rdtmanager: fix clock leak

The clock returned by gst_system_clock_obtain() was never unreffed.

https://bugzilla.gnome.org/show_bug.cgi?id=766565